--- a/index.html
+++ b/index.html
@@ -13,19 +13,47 @@
   </head>
   <body class="container-fluid">
     <header class="row">
-    
+      <div class="row">
+        <div class="col-12">
+          <img id="header" src="./Capturar.PNG">
+        </div>        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light col-12">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Disabled</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+       </div>  
     </header>
+    <div class="row">
+      <main class="col-12 col-lg-8">
+       <div class="row">
+         <div class="col-12 col-lg-8">
+         <div class="col-5 col-lg-7 imagem-main"> 
+        <img src="./maiiin.PNG">
         
-  <div class="row">
-    <main class="col-12 col-lg-8">
-        <div class="row">
-            <section class="col-12 ">0</section>
-            <section class="col-12 col-lg-6">0</section>
-            <section class="col-12 col-lg-6">0</section>
+           </div>
+         </div>
         </div>
-    </main>
+     </main>
     <aside class="col-12 col-lg-4">
-        <div class="row">
+        <div class="row"> 
             <section class="col-12 mt-2 mb-2">0</section>
             <section class="col-12 mt-2 mb-2">0</section>
             <section class="col-12 mt-2 mb-2">0</section>
