--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="row">
       <div class="row">
         <div class="col-12">
-          <img id="header" src="./Capturar.PNG">
+          <img id="header" src="./">
         </div>        
         <nav class="navbar navbar-expand-lg navbar-light bg-light col-12">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -44,12 +44,30 @@
     <div class="row">
       <main class="col-12 col-lg-8">
        <div class="row">
-         <div class="col-12 col-lg-8">
-         <div class="col-5 col-lg-7 imagem-main"> 
-        <img src="./maiiin.PNG">
-        
-           </div>
-         </div>
+          <div class="card col-12">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card col-12 col-lg-6">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card col-12 col-lg-6">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
      </main>
     <aside class="col-12 col-lg-4">
